crates/kirin-derive-interpreter/src/interpretable/snapshots/kirin_derive_interpreter__interpretable__tests__wrapper_struct.snap
---
source: crates/kirin-derive-interpreter/src/interpretable/tests.rs
expression: "case!\n{ #[kirin(type = TestType)] struct Wrapper { #[wraps] inner: InnerType, } }"
---
#[automatically_derived]
impl<'__ir, __InterpI, __InterpL> ::kirin_interpreter::Interpretable<'__ir, __InterpI, __InterpL>
    for Wrapper
where
    __InterpI: ::kirin_interpreter::Interpreter<'__ir>,
    __InterpL: ::kirin_ir::Dialect,
    InnerType: ::kirin_interpreter::Interpretable<'__ir, __InterpI, __InterpL>,
{
    fn interpret(
        &self,
        interpreter: &mut __InterpI,
    ) -> Result<::kirin_interpreter::Continuation<__InterpI::Value, __InterpI::Ext>, __InterpI::Error>
    {
        let Self { inner } = self;
        inner.interpret(interpreter)
    }
}
